--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               <div class="card p-3 flex-fill">
                 <div class="d-flex align-items-center gap-3">
                   <i class="bi bi-envelope fs-3" style="color:#6c757d;"></i>
-                  <a href="mailto:jesseat121067@gmail.com" class="text-decoration-none">
+                  <a href="mailto:jesseat121067@gmail.com" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
                     jesseat121067@gmail.com
                   </a>
                 </div>
@@ -345,3 +345,4 @@
     
   </body>
 </html>
+
