--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 View Projects
               </a>
 
-              <a href="/Assets/CerboCV.pdf" class="btn btn-outline-light btn-lg" target="_blank" rel="noopener noreferrer">
+              <a href="Assets/CerboCV.pdf" class="btn btn-outline-light btn-lg" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-file-earmark-arrow-down me-2"></i>
                 Check out my CV
               </a>
@@ -345,5 +345,6 @@
     
   </body>
 </html>
+
 
 
